# andrew-science

./: .gitignore  Makefile  README.md  index.html  style.css
build_scripts/: README.MD  pyproject.toml
build_scripts/build_scripts/: __init__.py  content.py  get_abs_id.py  get_page_info.py  get_pages.py  get_posts.py  markdownContent.py  pages.py  posts.py  render.py  renderIndex.py  renderPage.py  renderPost.py
build_scripts/tests/: test.j2  test_jinja2.py  test_markdown.py  test_scripts.py
content/: Makefile  MakefilePage  MakefilePost  content.json  index.json  index.md  page.mak  recurse.mak
content/projects/: projects.json  projects.md
content/projects/raycaster/: Makefile  raycaster.json  raycaster.md
sass/: style.scss
static/coming_soon/: index.html
templates/: contacts.j2  footer.j2  head.j2  header.j2  index.j2  page.j2  post.j2
