[tool.poetry]
name = "build_scripts"
version = "0.1.0"
description = "Scripts for building my website"
authors = ["Andrew <awintenb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jinja2 = "^3.1.2"
Markdown = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
